# YQ-ISP

./: .gitignore  CMakeLists.txt  README.md
calib/: calib_cc_sigma_A102_nikonD610.h  calib_lsc_sigma_A102_nikonD610.h  chromatix_cc.h  chromatix_lsc.h
cfg/: V1_config.xml  test_awbgain_config.xml  test_bgrir_config.xml  test_purple_fringing_config.xml
doc/: VisionLOG_NikonD610.dcp  manual.md  plantuml.md
inc/: ae_stat.h  ae_stat_fw.h  ae_stat_hw.h  awb_gain.h  awb_gain_fw.h  awb_gain_hw.h  blc.h  blc_fw.h  blc_hw.h  cac_rgb.h  cac_rgb_hw.h  cc.h  cc_fw.h  cc_hw.h  common.h  demosaic.h  demosaic_fw.h  demosaic_hw.h  fe_firmware.h  fileRead.h  file_read.h  fw_base.h  fw_manager.h  gamma.h  gamma_fw.h  gamma_hw.h  gtm.h  gtm_fw.h  gtm_hw.h  gtm_stat.h  gtm_stat_fw.h  gtm_stat_hw.h  hsv_lut.h  hsv_lut_fw.h  hsv_lut_hw.h  hw_base.h  isp_interface.h  log.h  lsc.h  lsc_fw.h  (+26 more)
isp_emulation/: copy_dll_debug.bat  copy_dll_release.bat  isp_emulation.sln  isp_emulation.vcxproj  isp_emulation.vcxproj.filters
isp_emulation/x64/Debug/: vc141.idb
isp_emulation/x64/Debug/isp_emulation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  isp_emulation.lastbuildstate
isp_emulation/x64/Release/: isp_emulation.iobj  isp_emulation.ipdb
isp_emulation/x64/Release/isp_emulation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  isp_emulation.lastbuildstate  isp_emulation.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pipeline/: full_pipeline_V1.cpp  test_awbgain_pipe.cpp  test_bgrir_pipe.cpp  test_purple_fringing_pipe.cpp
raw_image/: _ATM8478.txt
raw_image/rgb-ir/: ana.py  ir-r-g-b-statis.py
raw_image/rgb-ir/colin/: 3xir0001-rgb.raw  3xir0001-rgb_info.txt  4xir0001-rgb.raw  4xir0001-rgb_info.txt  noir0001-rgb.raw  noir0001-rgb_info.txt
src/: CMakeLists.txt  ae_stat.cpp  ae_stat_fw.cpp  ae_stat_hw.cpp  awb_gain.cpp  awb_gain_fw.cpp  awb_gain_hw.cpp  blc.cpp  blc_fw.cpp  blc_hw.cpp  cac_rgb.cpp  cac_rgb_hw.cpp  cc.cpp  cc_fw.cpp  cc_hw.cpp  demosaic.cpp  demosaic_eig_impl.cpp  demosaic_fw.cpp  demosaic_hw.cpp  demosaic_vng_impl.cpp  fe_firmware.cpp  fileRead.cpp  file_read.cpp  fw_base.cpp  fw_manager.cpp  gamma.cpp  gamma_fw.cpp  gamma_hw.cpp  gtm.cpp  gtm_fw.cpp  gtm_hw.cpp  gtm_stat.cpp  gtm_stat_fw.cpp  gtm_stat_hw.cpp  hsv_lut.cpp  hsv_lut_fw.cpp  hsv_lut_hw.cpp  hw_base.cpp  isp_interface.cpp  log.cpp  (+26 more)
src/UI_main/: CMakeLists.txt  human_brain.xpm  icon.rc  src.cpp
src/console_main/: CMakeLists.txt  console_main.cpp
test_code/: generate_lsc_gain.cpp  generate_pnm.cpp  ps_curve.py  shell_color.cpp  show_lsc_map.py
